<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_36dp"
    app:layoutDescription="@xml/detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/labelFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_file_name"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@id/labelStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelFileName"
        app:layout_constraintTop_toTopOf="@id/labelFileName"
        tools:text="Retrofit - Type-safe HTTP Client for Android and Java by Square, Inc" />

    <TextView
        android:id="@+id/labelStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_status"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@id/buttonOK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelFileName" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelStatus"
        app:layout_constraintTop_toTopOf="@id/labelStatus"
        tools:text="Success" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>
